start open dialog in home if not started from terminal

BUG: 439125